Added a print stylesheet, and added a button implementation page.

--- a/stylesheets/colors.css
+++ b/stylesheets/colors.css
@@ -12,6 +12,19 @@
 	
 -------------------------------------------------------- */
 
+
+/* Text Selection
+--------------------------------- */
+::selection {
+  background: #f5f7f9; /* Safari */
+  color:#333;
+}
+::-moz-selection {
+  background: #f5f7f9; /* Firefox */
+  color:#333;
+}
+
+
 /* ================================================
 		WRAPPER
 ================================================== */
