Updates made to styles for navigation effects.

--- a/stylesheets/framework/cframework.css
+++ b/stylesheets/framework/cframework.css
@@ -116,7 +116,7 @@ img.rfloat.frame, img.lfloat.frame, img.frame {
 	float: left;
 	margin-left: 10px;
 	margin-right: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 0;
 }
 
 /* Full Grid
@@ -399,6 +399,37 @@ img.rfloat.frame, img.lfloat.frame, img.frame {
   .container .grid-11,
   .container .grid-12 { width: 420px; }
 
+  /* Pull - Reset for Mobile
+  --------------------------------- */
+  .container .pull-1,
+  .container .pull-2,
+  .container .pull-3,
+  .container .pull-4,
+  .container .pull-5,
+  .container .pull-6,
+  .container .pull-7,
+  .container .pull-8,
+  .container .pull-9,
+  .container .pull-10,
+  .container .pull-11,
+  .container .pull-12 { left: 0; }
+
+  /* Push - Reset for Mobile
+  --------------------------------- */
+  .container .container .push-1,
+  .container .push-2,
+  .container .push-3,
+  .container .push-4,
+  .container .push-5,
+  .container .push-6,
+  .container .push-7,
+  .container .push-8,
+  .container .push-9,
+  .container .push-10,
+  .container .push-11,
+  .container .push-12 { left: 0; }
+
+
   /* Header
   --------------------------------- */
   header {
@@ -474,7 +505,36 @@ img.rfloat.frame, img.lfloat.frame, img.frame {
   .container .grid-11,
   .container .grid-12 { width: 300px; }
 
+  /* Pull - Reset for Mobile
+  --------------------------------- */
+  .container .pull-1,
+  .container .pull-2,
+  .container .pull-3,
+  .container .pull-4,
+  .container .pull-5,
+  .container .pull-6,
+  .container .pull-7,
+  .container .pull-8,
+  .container .pull-9,
+  .container .pull-10,
+  .container .pull-11,
+  .container .pull-12 { left: 0; }
 
+  /* Push - Reset for Mobile
+  --------------------------------- */
+  .container .container .push-1,
+  .container .push-2,
+  .container .push-3,
+  .container .push-4,
+  .container .push-5,
+  .container .push-6,
+  .container .push-7,
+  .container .push-8,
+  .container .push-9,
+  .container .push-10,
+  .container .push-11,
+  .container .push-12 { left: 0; }
+  
   /* Header
   --------------------------------- */
   header {
