--- a/demo.css
+++ b/demo.css
@@ -1,8 +1,6 @@
 /*  --------------------------------------------------
-  :: 
+  :: DEMO Centurion
   -------------------------------------------------- */
-
-
 
 code {
   background: #ccc;
@@ -17,7 +15,7 @@ nav h1 {
   color: #FFF;
   float: left;
   font-size: 18px;
-  margin: 8px 30px 0 10px;
+  margin: 10px 30px 0 10px;
   padding: 0;
 }
 nav#main {
@@ -45,7 +43,7 @@ nav#main ul li a {
   display: inline-block;
   float: left;
   margin: 0;
-  padding: 10px 20px;
+  padding: 15px 20px;
   text-decoration: none;
 }
 nav#main ul li a:hover {
