Updated grid media queries
Fixed issue with mobile media query kicking in at 768px should have
been lower to accomodate iPad screen sizes. Custom file and Centurion
have been updated to accomodate this. (issue #5)

--- a/sass/centurion.scss
+++ b/sass/centurion.scss
@@ -26,12 +26,12 @@
 @include fixed;
 
 /* Tablet Fluid Grid Layout - 92% */
-@media only screen and (max-width: 920px) {
+@media only screen and (min-width: 521px) and (max-width: 920px) {
   @include fluid;
 }
 
 /* Mobile Grid Layout - 320px and 480px */
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 520px) {
   @include mobile;
   @include navigation-mobile;
   .hide-desktop { display: block; }
