--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -38,7 +38,11 @@ footer {
   
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 521px) and (max-width: 768px) {
+  
+}
+
+@media screen and (min-width: 320px) and (max-width: 520px) {
   
 }
 
