.hide-mobile hiding for all screen sizes

--- a/sass/centurion.scss
+++ b/sass/centurion.scss
@@ -14,7 +14,7 @@
 
 -------------------------------------------------------- */
 .hide-desktop { display: none; }
-.hide-mobile { display: none; }
+.hide-mobile { display: block; }
 //.show-desktop { display: block; }
 //.show-mobile { display: block; }
 
