--- a/css/centurion.css
+++ b/css/centurion.css
@@ -1,14 +1,10 @@
 /* -------------------------------------------------------
-  
-  Centurion Framework
-  
-  Centurion Framework v 3.0
-  
-  Created by:  Justin Hough
-  Documentation:  http://www.justinhough.com/centurion
 
-  GPL license:
-  http://www.gnu.org/licenses/gpl.html
+  Centurion Framework v 3.0
+	Created by: Justin Hough
+
+	Documentation: http://jhough10.github.com/Centurion/documentation.html
+  Licensed under GPL and MIT.
 
 -------------------------------------------------------- */
 .hide-desktop {
