--- a/css/fluid.css
+++ b/css/fluid.css
@@ -1,24 +1,18 @@
 /* -------------------------------------------------------
-  
-  Centurion Framework - FLUID
-  
-  Centurion Framework v.2.3
-  
-  Created by:  Justin Hough
-  Documentation:  http://www.justinhough.com/centurion
 
-  GPL license:
-  http://www.gnu.org/licenses/gpl.html
+  Centurion Framework v.3 - FLUID
+	Created by: Justin Hough
+
+	Documentation: http://jhough10.github.com/Centurion/documentation.html
+  Licensed under GPL and MIT.
 
 -------------------------------------------------------- */
 /* Desktop/Tablet Fluid Grid Layout - 92% */
-/* line 85, ../sass/core/_grid.scss */
 .container {
   width: 92%;
   margin-left: 4%;
   margin-right: 4%;
 }
-/* line 89, ../sass/core/_grid.scss */
 .container .grid-1, .container .grid-2, .container .grid-3, .container .grid-4, .container .grid-5, .container .grid-6, .container .grid-7, .container .grid-8, .container .grid-9, .container .grid-10, .container .grid-11, .container .grid-12 {
   display: inline;
   float: left;
@@ -26,167 +20,127 @@
   margin-right: 1%;
   position: relative;
 }
-/* line 30, ../sass/core/_grid.scss */
 .container .centerGrid {
   display: block;
   float: none;
   margin-left: auto;
   margin-right: auto;
 }
-/* line 176, ../sass/core/_grid.scss */
 .container .alpha {
   margin-left: 0;
 }
-/* line 177, ../sass/core/_grid.scss */
 .container .omega {
   margin-right: 0;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-1 {
   width: 6.33333%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-2 {
   width: 14.66667%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-3 {
   width: 23%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-4 {
   width: 31.33333%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-5 {
   width: 39.66667%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-6 {
   width: 48%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-7 {
   width: 56.33333%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-8 {
   width: 64.66667%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-9 {
   width: 73%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-10 {
   width: 81.33333%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-11 {
   width: 89.66667%;
 }
-/* line 103, ../sass/core/_grid.scss */
 .container .grid-12 {
   width: 98%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-1 {
   left: -8.33333%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-2 {
   left: -16.66667%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-3 {
   left: -25%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-4 {
   left: -33.33333%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-5 {
   left: -41.66667%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-6 {
   left: -50%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-7 {
   left: -58.33333%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-8 {
   left: -66.66667%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-9 {
   left: -75%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-10 {
   left: -83.33333%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-11 {
   left: -91.66667%;
 }
-/* line 108, ../sass/core/_grid.scss */
 .container .pull-12 {
   left: -100%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-1 {
   left: 8.33333%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-2 {
   left: 16.66667%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-3 {
   left: 25%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-4 {
   left: 33.33333%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-5 {
   left: 41.66667%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-6 {
   left: 50%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-7 {
   left: 58.33333%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-8 {
   left: 66.66667%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-9 {
   left: 75%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-10 {
   left: 83.33333%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-11 {
   left: 91.66667%;
 }
-/* line 113, ../sass/core/_grid.scss */
 .container .push-12 {
   left: 100%;
 }
 
-/* line 30, ../sass/core/_grid.scss */
 .centerGrid {
   display: block;
   float: none;
@@ -195,7 +149,6 @@
 }
 
 /* Clearfix */
-/* line 7, ../sass/core/_grid.scss */
 .clearfix:after, .clearfix:before,
 .container:after,
 .container:before {
@@ -207,13 +160,11 @@
   clear: both;
   zoom: 1;
 }
-/* line 16, ../sass/core/_grid.scss */
 * html .clearfix, * html
 .container {
   height: 1px;
 }
 
-/* line 18, ../sass/core/_grid.scss */
 .clear {
   clear: both;
   display: block;
