--- a/sass/centurion.scss
+++ b/sass/centurion.scss
@@ -1,16 +1,11 @@
 @import "core/base";
-
 /* -------------------------------------------------------
-  
-  Centurion Framework
-  
-  Centurion Framework v 3.0
-  
-  Created by:  Justin Hough
-  Documentation:  http://www.justinhough.com/centurion
 
-  GPL license:
-  http://www.gnu.org/licenses/gpl.html
+  Centurion Framework v 3.0
+	Created by: Justin Hough
+
+	Documentation: http://jhough10.github.com/Centurion/documentation.html
+  Licensed under GPL and MIT.
 
 -------------------------------------------------------- */
 .hide-desktop { display: none; }
@@ -38,13 +33,11 @@
   .hide-mobile { display: none; }
 }
 
-
 /* Centering Grid */
 @include centerGrid;
 
 /* Clearfix */
 @include clearfix;
-
 
 /* ======================================================
     Features
