--- a/sass/fluid.scss
+++ b/sass/fluid.scss
@@ -1,15 +1,11 @@
 @import "core/base";
 /* -------------------------------------------------------
-  
-  Centurion Framework - FLUID
-  
-  Centurion Framework v.2.3
-  
-  Created by:  Justin Hough
-  Documentation:  http://www.justinhough.com/centurion
 
-  GPL license:
-  http://www.gnu.org/licenses/gpl.html
+  Centurion Framework v.3 - FLUID
+	Created by: Justin Hough
+
+	Documentation: http://jhough10.github.com/Centurion/documentation.html
+  Licensed under GPL and MIT.
 
 -------------------------------------------------------- */
 
