updated custom sass file

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,17 +1,33 @@
-/* CONTENT
-================================================== */
+/* TYPOGRAPHY */
+/* line 4, ../sass/custom.scss */
+p, ul, ol {
+  margin: 10px 0;
+}
+
+/* line 10, ../sass/custom.scss */
+ul ul,
+ol ol,
+ul ol,
+ol ul {
+  margin: 0;
+}
+
+/* NAV */
+/* CONTENT */
+/* line 20, ../sass/custom.scss */
 section {
   margin: 10px 0;
 }
 
-/* FOOTER
-================================================== */
+/* FOOTER */
+/* line 25, ../sass/custom.scss */
 footer {
   background: black;
   min-height: 50px;
   margin-top: 30px;
   padding: 20px 0 10px 0;
 }
+/* line 30, ../sass/custom.scss */
 footer h2 {
   color: white;
   display: block;
@@ -21,6 +37,7 @@ footer h2 {
   font-weight: bold;
   margin: 10px 0;
 }
+/* line 36, ../sass/custom.scss */
 footer p,
 footer blockquote,
 footer article,
@@ -30,6 +47,7 @@ footer section {
   font-size: 12px;
   line-height: 1.5;
 }
+/* line 50, ../sass/core/_typography.scss */
 footer a {
   color: white;
   white-space: pre;
@@ -41,9 +59,11 @@ footer a {
   white-space: -hp-pre-wrap;
   word-wrap: break-word;
 }
+/* line 53, ../sass/core/_typography.scss */
 footer a:hover {
   color: #999999;
 }
+/* line 54, ../sass/core/_typography.scss */
 footer a:visited {
   color: white;
 }
