--- a/sass/centurion.scss
+++ b/sass/centurion.scss
@@ -13,6 +13,7 @@
 //.show-desktop { display: block; }
 //.show-mobile { display: block; }
 
+
 /* ======================================================
     GRID
 ========================================================= */
@@ -58,6 +59,8 @@
 /* Panels */
 @include panels;
 
+/* Tabs */
+@include tabs-base;
 
 /* Tables */
 @include tables;
@@ -67,7 +70,6 @@
 // #3 - even row color
 // #4 - odd row color
 //@include table-color-generator(__#1__ , __#2__, __#3__, __#4__);
-
 
 /*  Typography  */
 @include typography;
