added styles for grid layout page

--- a/css/custom.css
+++ b/css/custom.css
@@ -48,6 +48,22 @@ footer a:visited {
   color: white;
 }
 
+/*  GRID LAYOUT  */
+.layoutGrid [class*="grid-"] p {
+	background: #EDEDED;
+	border: 1px solid #555;
+	font-size: 13px;
+	margin-bottom: 20px;
+	padding: 10px;
+}
+.layoutGrid p.noStyle {
+	background: none;
+	border: none;
+	padding: 0;
+}
+
+
+
 /* ================================================
     Custom Media Queries
 ================================================== */
