--- a/sass/core/_colors.scss
+++ b/sass/core/_colors.scss
@@ -21,9 +21,8 @@ $border-color: rgba(#CCCCCC, 1.0);
 // Two color gradient - supplied by compass
 // @include gradient-two(#1, #2);
 @mixin gradient-two($start, $end) {
-  $experimental-support-for-svg: true;
+  $experimental-support-for-svg: false;
   @include background-image(linear-gradient($start, $end));
-  //@include linear-gradient($end, $start);
 }
 
 
@@ -37,7 +36,7 @@ $border-color: rgba(#CCCCCC, 1.0);
   background: -o-linear-gradient(top,  $start 0%,$middle 40%,$end 100%);
   background: -ms-linear-gradient(top,  $start 0%,$middle 40%,$end 100%);
   background: linear-gradient(top,  $start 0%,$middle 40%,$end 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$start', endColorstr='$end',GradientType=0 );
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$start', endColorstr='$end',GradientType=0 );
 }
 
 
@@ -46,7 +45,7 @@ $border-color: rgba(#CCCCCC, 1.0);
 @mixin box-shadow($top: 0, $bottom: 0, $spread: 5px, $color: rgba(#000, .4)) {
   -moz-box-shadow: $top $bottom $spread $color;
   -webkit-box-shadow: $top $bottom $spread $color;
-  -ms-box-shadow: $top $bottom $spread $color;
-  -o-box-shadow: $top $bottom $spread $color;
+//  -ms-box-shadow: $top $bottom $spread $color;
+//  -o-box-shadow: $top $bottom $spread $color;
   box-shadow: $top $bottom $spread $color;
 }
