--- a/sass/centurion.scss
+++ b/sass/centurion.scss
@@ -73,4 +73,8 @@
 @include typography;
 
 /* Print */
-@media print { }
+@media print {
+  a[href]:after {
+    content: " (" attr(href) ") ";  
+  }
+}
