--- a/sass/centurion.scss
+++ b/sass/centurion.scss
@@ -1,7 +1,7 @@
 @import "core/base";
 /* -------------------------------------------------------
 
-  Centurion Framework v 3.0
+  Centurion Framework v 3.1
 	Created by: Justin Hough
 
 	Documentation: http://jhough10.github.com/Centurion/documentation.html
@@ -65,6 +65,8 @@
 
 /* Tabs */
 @include tabs-base;
+@include tabs-bottom;
+@include tabs-stacked;
 
 /* Tables */
 @include tables;
